--- a/src/style.css
+++ b/src/style.css
@@ -35,23 +35,22 @@ body {
 }
 
 .border {
-  border: solid #800 3px;
+  border: solid rgba(196, 0, 0, 0.50) 4px;
   background-color: rgba(0, 0, 0, 0.50);
   padding: 5px;
   max-width: 80vw;
-  border-radius: 3px;
-}
-
-.inner {
-  padding: 20px;
-  filter: blur(2px);
+  border-radius: 2px;
 }
 
 #msg {
+  padding: 10px;
+  filter: blur(min(2px, 0.25vw));
   font-family: monospace;
   font-weight: bold;
-  font-size: calc(min(72px, 5vw));
+  font-size: min(72px, 5.5vw);
   text-align: center;
-  color: #800;
+  color: rgb(196, 0, 0);
   text-shadow: 0 0 3px rgba(128, 0, 0, 0.15);
+  text-transform: uppercase;
+  display: block;
 }
